landing/landing.css
@import url(https://fonts.googleapis.com/css?family=Roboto);
@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);

.fa {
    cursor: default;
}

a .fa {
    cursor: pointer;
    color: initial;
    text-decoration: none;
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    font-family: Roboto, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    font-weight: bold;
}
h1 {
    font-size: 4rem;
}
h2 {
    font-size: 2.5rem;
}
h3 {
    font-size: 2rem;
}
h4 {
    font-size: 1.7rem;
}
h5 {
    font-size: 1.4rem;
}
h6 {
    font-size: 1.2rem;
}

section {
    overflow-y: hidden;
}

/* Change the pagination icons to white */
.onepage-pagination li a.active::before {
    border-color: #888;
}
.onepage-pagination li a::before {
    background-color: #888;
}

.background-container {
    content: '';
    position: absolute;
    left: 0;
    top: -10%;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-position: center top;
    background-size: 640px;
    background-repeat: no-repeat;
}

    /* Banner Page */
    #banner .background-container {
        /*background-image: url(https://placehold.it/1920x1080);*/
        background-image: url(multiplicities.jpg);
    }
    #banner h1 {
        display: none;
    }
    #banner header #tagline {
        position: absolute;
        bottom: 15%;
        display: block;
        width: 100%;
        font-size: 2rem;
        text-align: center;

    }

    /* Description Page */
    #description {
        padding-top: 5%;
    }
    #description h2 {
        margin-bottom: 5%;
    }
    #description p {
        max-width: 960px;
        margin: auto;
        font-size: 1.5rem;
        text-align: center;
        margin-bottom: 2em;
    }

    /* Biographies Page */
    #biographies h2 {
        margin-top: 4%;
    }
    ul.biographies {
        padding-left: 0;
        max-width: 1024px;
        margin: auto;
        margin-top: 2%;
        text-align: center;
    }
    ul.biographies > li {
        display: inline-block;
        margin-left: 3%;
        margin-right: 3%;
        width: 20%;
        min-width: 256px;
        height: 50%;
    }
    img.bio-image {
        display: block;
        width: 150px;
        height: 150px;
        margin: auto;
        border-radius: 50%;
    }
    div.contact {
        display: block;
        text-align: center;
    }
    div.contact > div {
        display: inline-block;
        margin-right: 1rem;
        margin-left: 1rem;
    }
    div.contact > div > a {
        font-size: 1.2em;
        display: block;
        vertical-align: middle;
        padding-top: 4px;
        padding-bottom: 4px;
        text-decoration: none;
    }
    div.contact > div > a > span {
        display: block;
        font-size: 4rem;
    }

    /* Advisory Board Page */
    #supporters > h2 {
        
    }
    ul#supporter-logos {
        padding-left: 0;
        max-width: 1024px;
        margin-left: auto;
        margin-right: auto;
        height: 20%;
        text-align: center;
    }
    ul#supporter-logos > li {
        display: inline-block;
    }
    ul#supporter-logos > li {
        max-width: 160px;
        margin: 2%;
    }
    ul#supporter-logos > li img {
        width: 100%;
        height: 100%;
    }

